Fixed hiss on ios not working on hitting play the second time

--- a/public/orator/css/styles.css
+++ b/public/orator/css/styles.css
@@ -599,7 +599,10 @@ img.book-cover-thumb[src="null"], img.book-cover-thumb[src=""]{
     left: 0;
     right: 0;
     border-radius: 7px;
-    transition: all 0.5s ease-in-out;
+    transition: 
+        top 0.5s cubic-bezier(0.20, 0.10, 0, 1), 
+        height 1s cubic-bezier(0.20, 0.10, 0, 1), 
+        background-color 0.5s ease-in-out;
 }
 
 .reader-container p {
